--- a/android/res/layout-land/activity_game.xml
+++ b/android/res/layout-land/activity_game.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.mygdx.game.GameActivity">
+    tools:context="com.mygdx.game.AndroidLauncher">
 
     <TextView
         android:text="Dies ist ein Testtext in der GameActivty"
